# futsal

./: .gitignore  README.md  main.py  requirements.txt
.claude/: settings.json  settings.local.json
config/: default.yaml
docs/: FOR_RICK.md  mvp_plan.md  plan_CLAUDE.md  plan_COPILOT.md  requirements.md  sensor_integration.md  solution_design.md
fusbal_governed_project/: package-lock.json  package.json  start_internal_portal.command
greenfield_governed_project/: .gitignore  (+5 more)
greenfield_governed_project/pipeline/: pyproject.toml
greenfield_governed_project/pipeline/fixtures/calibration/venues/example_venue/pitch_a/: calibration_input.json  markings_observations.json  pitch_template.json
greenfield_governed_project/pipeline/src/fusbal_pipeline/: __main__.py  bundle.py  cli.py  contract.py
greenfield_governed_project/pipeline/src/fusbal_pipeline/ball/: detections.py  tracker.py
greenfield_governed_project/pipeline/src/fusbal_pipeline/calibration/: __init__.py  diagnostics.py  gating.py  manual.py
greenfield_governed_project/pipeline/src/fusbal_pipeline/events/: types.py
greenfield_governed_project/pipeline/src/fusbal_pipeline/player/: detections.py  detector.py  mot.py  track_types.py
greenfield_governed_project/pipeline/src/fusbal_pipeline/team/: assignment.py  colors.py
greenfield_governed_project/pipeline/tests/: conftest.py  test_ball_v1.py  test_calibration_fixtures.py  test_contract_validation.py  test_events_v1.py  test_int_030_fixture_run.py  test_manifest_determinism.py  test_player_detections.py  test_player_mot.py  test_team_assignment.py
(+646 files in other folders)
