[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fusbal-pipeline"
version = "0.0.0"
description = "Fusbal offline futsal tracking pipeline (scaffolding)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fusbal-pipeline = "fusbal_pipeline.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
