[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fusbal-pipeline"
version = "0.0.0"
description = "Fusbal offline futsal tracking pipeline (scaffolding)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"ruff>=0.5",
	"black>=24.0",
]

[project.scripts]
fusbal-pipeline = "fusbal_pipeline.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py310"]
